commit translated contents

--- a/docs/docs-ref-autogen/excel/custom-functions-runtime/customfunctions.cancelableinvocation.yml
+++ b/docs/docs-ref-autogen/excel/custom-functions-runtime/customfunctions.cancelableinvocation.yml
@@ -4,9 +4,9 @@ items:
     summary: |-
       提供有关可取消的自定义函数的调用的信息。 可取消的自定义函数可提供 onCanceled 事件的处理程序。
 
-      若要指示某个函数可取消，在元数据 JSON 文件中，函数选项应指定：`{ "cancelable": true }`
+      若要指示某个函数可取消，在元数据 JSON 文件中，函数选项应指定： `{ "cancelable": true }`
 
-      如果要从 JSDoc 注释生成元数据 JSON 文件，请包含标记`@cancelable`<!-- -->.
+      如果要从 JSDoc 注释生成元数据 JSON 文件，请包含标记 `@cancelable`<!-- -->.
     name: CustomFunctions.CancelableInvocation
     fullName: CustomFunctions.CancelableInvocation
     langs:
@@ -18,7 +18,7 @@ items:
     children:
       - 'custom-functions-runtime!CustomFunctions.CancelableInvocation#onCanceled:member'
   - uid: 'custom-functions-runtime!CustomFunctions.CancelableInvocation#onCanceled:member'
-    summary: 取消自定义函数时调用的事件处理程序。
+    summary: '取消自定义函数时调用的事件处理程序。 \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]'
     name: onCanceled
     fullName: onCanceled
     langs:
