--- a/docs/docs-ref-autogen/excel_online/custom-functions-runtime/customfunctions.invocation.yml
+++ b/docs/docs-ref-autogen/excel_online/custom-functions-runtime/customfunctions.invocation.yml
@@ -10,13 +10,14 @@ items:
     package: custom-functions-runtime!
     children:
       - 'custom-functions-runtime!CustomFunctions.Invocation#address:member'
+      - 'custom-functions-runtime!CustomFunctions.Invocation#parameterAddresses:member'
   - uid: 'custom-functions-runtime!CustomFunctions.Invocation#address:member'
     summary: |-
       调用函数的单元格地址（如果请求），否则为未定义。
 
-      若要请求函数的地址，请在元数据 JSON 文件中，函数选项应指定：`{ "requiresAddress": true }`
+      若要请求函数的地址，请在元数据 JSON 文件中，函数选项应指定： `{ "requiresAddress": true }`
 
-      如果要从 JSDoc 注释生成元数据 JSON 文件，请包含标记`@requiresAddress`<!-- -->.
+      如果要从 JSDoc 注释生成元数据 JSON 文件，请包含标记 `@requiresAddress`<!-- -->. \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: address
     fullName: address
     langs:
@@ -24,6 +25,23 @@ items:
     type: property
     syntax:
       content: 'address?: string;'
+      return:
+        type:
+          - string
+  - uid: 'custom-functions-runtime!CustomFunctions.Invocation#parameterAddresses:member'
+    summary: |-
+      函数参数位于其中的区域地址，如果请求，则为，否则为未定义。
+
+      若要请求函数的参数地址，请在元数据 JSON 文件中，函数选项应指定： `{ "requiresParameterAddresses": true }`
+
+      如果要从 JSDoc 注释生成元数据 JSON 文件，请包含标记 `@requiresParameterAddresses`<!-- -->. \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+    name: parameterAddresses
+    fullName: parameterAddresses
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'parameterAddresses?: string;'
       return:
         type:
           - string
