--- a/docs/docs-ref-autogen/excel_online/toc.yml
+++ b/docs/docs-ref-autogen/excel_online/toc.yml
@@ -14,6 +14,10 @@ items:
                 items:
                   - name: CancelableInvocation
                     uid: 'custom-functions-runtime!CustomFunctions.CancelableInvocation:interface'
+                  - name: Error
+                    uid: 'custom-functions-runtime!CustomFunctions.Error:class'
+                  - name: ErrorCode
+                    uid: 'custom-functions-runtime!CustomFunctions.ErrorCode:enum'
                   - name: 调用
                     uid: 'custom-functions-runtime!CustomFunctions.Invocation:interface'
                   - name: StreamingInvocation
@@ -574,7 +578,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -944,11 +948,11 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -1024,7 +1028,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
