commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
@@ -1406,7 +1406,10 @@ items:
           type:
             - 'outlook!Office.MessageRead#getSharedPropertiesAsync~1:complex'
   - uid: 'outlook!Office.MessageRead#internetMessageId:member'
-    summary: 获取电子邮件的 internet 邮件标识符。
+    summary: |-
+      获取电子邮件的 internet 邮件标识符。
+
+      **重要说明**：在 " **已发送邮件** " 文件夹中， `internetMessageId` 可能尚未提供 "最近发送的邮件"。 在这种情况下，请考虑使用[Exchange Web 服务](https://docs.microsoft.com/office/dev/add-ins/outlook/web-services)[从服务器](https://docs.microsoft.com/exchange/client-developer/web-service-reference/internetmessageid)获取此属性<!-- -->.
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
@@ -1440,7 +1443,7 @@ items:
 
       `itemClass` 属性指定所选项目的邮件类别。以下是邮件或约会项目的默认邮件类别。
 
-      <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>IPM.NOTE.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意，以及使用 IPM 的会议请求、响应和取消。Schedule：作为基本邮件类的会议。</td> <td>IPM.NOTE.请注意，IPM。Schedule （会议）请求，IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排：会议，IPM。日程安排. 会议. 已取消</td> </tr> </table>
+      <table> <tr> <th>类型</th> <th>Description</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>IPM.NOTE.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意，以及使用 IPM 的会议请求、响应和取消。Schedule：作为基本邮件类的会议。</td> <td>IPM.NOTE.请注意，IPM。Schedule （会议）请求，IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排：会议，IPM。日程安排. 会议. 已取消</td> </tr> </table>
 
       #### <a name="examples"></a>示例
 
