commit translated contents

--- a/docs/docs-ref-autogen/excel_1_2/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_2/toc.yml
@@ -176,7 +176,7 @@ items:
             uid: 'excel!Excel.ChartTitle:class'
           - name: ChartTitleFormat
             uid: 'excel!Excel.ChartTitleFormat:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -217,7 +217,7 @@ items:
           - name: SelectionChangedEventArgs
             uid: 'excel!Excel.SelectionChangedEventArgs:interface'
           - name: 会话
-            uid: 'excel!Excel.Session:class'
+            uid: 'excel!Excel.Session:interface'
           - name: SortField
             uid: 'excel!Excel.SortField:interface'
           - name: Table
@@ -350,11 +350,11 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -430,7 +430,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
