--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.slicercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.slicercollectionloadoptions.yml
@@ -19,13 +19,14 @@ items:
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#isFilterCleared:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#left:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#slicerStyle:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#sortBy:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#style:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#top:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#width:member'
       - 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -126,6 +127,21 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#slicerStyle:member'
+    summary: |-
+      对于集合中的每一项：应用于切片器的样式。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: slicerStyle
+    fullName: slicerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'slicerStyle?: Excel.Interfaces.SlicerStyleLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#sortBy:member'
     summary: |-
       对于集合中的每一项：表示切片器中项目的排序顺序。 可能的值为： "DataSourceOrder"、"升序"、"降序"。
@@ -202,5 +218,7 @@ items:
         type:
           - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
 references:
+  - uid: 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
+    name: Excel.Interfaces.SlicerStyleLoadOptions
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
     name: Excel.Interfaces.WorksheetLoadOptions
