--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriescollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriescollectionloadoptions.yml
@@ -29,7 +29,7 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#showShadow:member'
       - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#smooth:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -192,7 +192,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：指定图表中的系列的名称。
+      对于集合中的每一项：指定图表中的系列的名称。 名称的长度不应超过255个字符。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
