--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeloadoptions.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions:interface'
     summary: |-
-      Range 表示一个或多个连续单元格的集合，例如单元格、行、列、单元格块等。若要了解有关如何在整个 API 中使用范围的详细信息，请参阅[使用 Excel JAVASCRIPT Api 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges)并使用[excel javascript api （高级）处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges-advanced)<!-- -->.
+      Range 表示一个或多个连续单元格的集合，例如单元格、行、列、单元格块等。若要了解有关如何在整个 API 中使用范围的详细信息，请参阅 [使用 Excel JAVASCRIPT Api 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges) 并使用 [excel javascript api (高级) ](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges-advanced)<!-- -->.
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeLoadOptions
@@ -24,6 +24,7 @@ items:
       - 'excel!Excel.Interfaces.RangeLoadOptions#formulas:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#formulasLocal:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#formulasR1C1:member'
+      - 'excel!Excel.Interfaces.RangeLoadOptions#hasSpill:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#height:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#hidden:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#hyperlink:member'
@@ -32,10 +33,12 @@ items:
       - 'excel!Excel.Interfaces.RangeLoadOptions#left:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#linkedDataTypeState:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormat:member'
+      - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatCategories:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatLocal:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#rowCount:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#rowHidden:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#rowIndex:member'
+      - 'excel!Excel.Interfaces.RangeLoadOptions#savedAsArray:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#style:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#text:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#top:member'
@@ -44,7 +47,7 @@ items:
       - 'excel!Excel.Interfaces.RangeLoadOptions#width:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -57,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#address:member'
     summary: |-
-      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用 (例如，"Sheet1！A1： B4 ") 。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -220,6 +223,21 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.RangeLoadOptions#hasSpill:member'
+    summary: |-
+      表示所有单元格是否都具有溢出边框。 如果所有单元格都有溢出边框，则返回 true; 如果所有单元格都没有溢出边框，则返回 false。 如果区域中有和没有溢出边框的单元格，则返回 null。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: hasSpill
+    fullName: hasSpill
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hasSpill?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#height:member'
     summary: |-
       返回从区域的上边缘到区域的下边缘的 100％ 缩放的距离（以磅为单位）。
@@ -340,6 +358,21 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatCategories:member'
+    summary: |-
+      表示每个单元格的数字格式的类别。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: numberFormatCategories
+    fullName: numberFormatCategories
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormatCategories?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatLocal:member'
     summary: |-
       根据用户的语言设置，表示给定范围的 Excel 数字格式代码。 在获取或设置属性时，Excel 不会执行任何语言或格式强制 `numberFormatLocal` 。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
@@ -397,6 +430,21 @@ items:
     type: property
     syntax:
       content: 'rowIndex?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.RangeLoadOptions#savedAsArray:member'
+    summary: |-
+      表示是否将所有单元格都保存为数组公式。 如果所有单元格都将保存为数组公式，则返回 true; 如果不将所有单元格保存为数组公式，则返回 false。 如果某些单元格将另存为数组公式，则返回 null，而某些单元格则不是。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: savedAsArray
+    fullName: savedAsArray
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'savedAsArray?: boolean;'
       return:
         type:
           - boolean
