--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.slicerdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.slicerdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.SlicerData:interface'
-    summary: 描述通过调用返回的数据的接口`slicer.toJSON()`<!-- -->.
+    summary: 描述通过调用返回的数据的接口 `slicer.toJSON()`<!-- -->.
     name: Excel.Interfaces.SlicerData
     fullName: Excel.Interfaces.SlicerData
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.SlicerData#left:member'
       - 'excel!Excel.Interfaces.SlicerData#name:member'
       - 'excel!Excel.Interfaces.SlicerData#slicerItems:member'
+      - 'excel!Excel.Interfaces.SlicerData#slicerStyle:member'
       - 'excel!Excel.Interfaces.SlicerData#sortBy:member'
       - 'excel!Excel.Interfaces.SlicerData#style:member'
       - 'excel!Excel.Interfaces.SlicerData#top:member'
@@ -126,6 +127,21 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.SlicerData#slicerItems~0:complex'
+  - uid: 'excel!Excel.Interfaces.SlicerData#slicerStyle:member'
+    summary: |-
+      应用于切片器的样式。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: slicerStyle
+    fullName: slicerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'slicerStyle?: Excel.Interfaces.SlicerStyleData;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.SlicerStyleData:interface'
   - uid: 'excel!Excel.Interfaces.SlicerData#sortBy:member'
     summary: |-
       表示切片器中的项目的排序顺序。 可能的值为： "DataSourceOrder"、"升序"、"降序"。
@@ -211,6 +227,8 @@ references:
         fullName: Excel.Interfaces.SlicerItemData
       - name: '[]'
         fullName: '[]'
+  - uid: 'excel!Excel.Interfaces.SlicerStyleData:interface'
+    name: Excel.Interfaces.SlicerStyleData
   - uid: 'excel!Excel.Interfaces.SlicerData#sortBy~0:complex'
     name: Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
     fullName: Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
