--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.worksheetdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.worksheetdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorksheetData:interface'
-    summary: 描述通过调用返回的数据的接口`worksheet.toJSON()`<!-- -->.
+    summary: 描述通过调用返回的数据的接口 `worksheet.toJSON()`<!-- -->.
     name: Excel.Interfaces.WorksheetData
     fullName: Excel.Interfaces.WorksheetData
     langs:
@@ -12,6 +12,7 @@ items:
       - 'excel!Excel.Interfaces.WorksheetData#autoFilter:member'
       - 'excel!Excel.Interfaces.WorksheetData#charts:member'
       - 'excel!Excel.Interfaces.WorksheetData#comments:member'
+      - 'excel!Excel.Interfaces.WorksheetData#customProperties:member'
       - 'excel!Excel.Interfaces.WorksheetData#enableCalculation:member'
       - 'excel!Excel.Interfaces.WorksheetData#horizontalPageBreaks:member'
       - 'excel!Excel.Interfaces.WorksheetData#id:member'
@@ -76,6 +77,21 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.WorksheetData#comments~0:complex'
+  - uid: 'excel!Excel.Interfaces.WorksheetData#customProperties:member'
+    summary: |-
+      获取工作表级自定义属性的集合。
+
+      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: customProperties
+    fullName: customProperties
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'customProperties?: Excel.Interfaces.WorksheetCustomPropertyData[];'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.WorksheetData#customProperties~0:complex'
   - uid: 'excel!Excel.Interfaces.WorksheetData#enableCalculation:member'
     summary: |-
       确定 Excel 是否应根据需要重新计算工作表。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
@@ -288,7 +304,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetData#standardWidth:member'
     summary: |-
-      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      指定工作表中所有列的标准 (默认) 宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -380,6 +396,15 @@ references:
       - uid: 'excel!Excel.Interfaces.CommentData:interface'
         name: Excel.Interfaces.CommentData
         fullName: Excel.Interfaces.CommentData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'excel!Excel.Interfaces.WorksheetData#customProperties~0:complex'
+    name: 'Excel.Interfaces.WorksheetCustomPropertyData[]'
+    fullName: 'Excel.Interfaces.WorksheetCustomPropertyData[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyData:interface'
+        name: Excel.Interfaces.WorksheetCustomPropertyData
+        fullName: Excel.Interfaces.WorksheetCustomPropertyData
       - name: '[]'
         fullName: '[]'
   - uid: 'excel!Excel.Interfaces.WorksheetData#horizontalPageBreaks~0:complex'
