--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.custompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.custompropertycollection.yml
@@ -46,7 +46,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/custom-properties.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/26-document/custom-properties.yaml
           await Excel.run(async (context) => {
             // Get the key/value pair from the task pane.
             const userKey = $("#key").text();
@@ -63,11 +63,11 @@ items:
           ```
       parameters:
         - id: key
-          description: 必需项。 自定义属性的键，它不区分大小写。 密钥限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符进行修整 (较长的字符) 。
+          description: 必需。 自定义属性的键，它不区分大小写。 密钥限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符进行修整 (较长的字符) 。
           type:
             - string
         - id: value
-          description: 必需项。 自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符 (较大值进行修整) 。
+          description: 必需。 自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符 (较大值进行修整) 。
           type:
             - any
   - uid: 'excel!Excel.CustomPropertyCollection#context:member'
@@ -153,7 +153,7 @@ items:
         description: ''
       parameters:
         - id: key
-          description: 必需项。 标识自定义属性对象的键。
+          description: 必需。 标识自定义属性对象的键。
           type:
             - string
   - uid: 'excel!Excel.CustomPropertyCollection#items:member'
