commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.messagecompose.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
-      - [邮件](xref:outlook!Office.Message:interface)
+      - [消息](xref:outlook!Office.Message:interface)
     name: Office.MessageCompose
     fullName: Office.MessageCompose
     langs:
@@ -866,8 +866,6 @@ items:
   - uid: 'outlook!Office.MessageCompose#from:member'
     summary: |-
       获取邮件发件人的电子邮件地址。
-
-      `from` 和 `sender` 属性表示同一个人，邮件由代理人发送的除外。 在这种情况下，该 `from` 属性表示所有者， `sender` 属性表示委托。
 
       `from`属性返回一个 `From` 对象，该对象提供用于获取 "起始" 值的方法。
 
