--- a/docs/docs-ref-autogen/excel_online/custom-functions-runtime/customfunctions.errorcode.yml
+++ b/docs/docs-ref-autogen/excel_online/custom-functions-runtime/customfunctions.errorcode.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       自定义函数的错误代码。 错误代码将显示在调用函数的单元格中。
 
-      除了这些错误代码之外，还将显示自定义错误消息。 自定义邮件将显示在错误指示器菜单中，该菜单通过单击出现错误的每个单元格上的错误标志来访问。
+      除了这些错误代码之外，还将显示自定义错误消息。 自定义邮件显示在错误指示器菜单中，该菜单通过将鼠标悬停在包含错误的每个单元格上的错误标志上方来访问。
     name: CustomFunctions.ErrorCode
     fullName: CustomFunctions.ErrorCode
     langs:
@@ -20,7 +20,7 @@ items:
       - 'custom-functions-runtime!CustomFunctions.ErrorCode.notAvailable:member'
       - 'custom-functions-runtime!CustomFunctions.ErrorCode.nullReference:member'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.divisionByZero:member'
-    summary: '此错误代码指示使用的函数被零或空单元格除。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]'
+    summary: '此错误代码指示使用的函数被零或空单元格除。 请注意，JavaScript 允许除数为零，因此需要仔细编写错误处理程序以检测此情况。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: divisionByZero
     fullName: divisionByZero
     langs:
@@ -28,7 +28,7 @@ items:
     type: field
     numericValue: '"#DIV/0!"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.invalidName:member'
-    summary: '此错误代码指示函数名称中有拼写错误。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数名称中有拼写错误。 请注意，此错误代码支持为自定义函数输入错误，而不是作为自定义函数输出错误。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: invalidName
     fullName: invalidName
     langs:
@@ -36,7 +36,7 @@ items:
     type: field
     numericValue: '"#NAME?"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.invalidNumber:member'
-    summary: '此错误代码指示函数中使用的数字存在问题。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数中的某个数字存在问题。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: invalidNumber
     fullName: invalidNumber
     langs:
@@ -44,7 +44,7 @@ items:
     type: field
     numericValue: '"#NUM!"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.invalidReference:member'
-    summary: '此错误代码指示函数引用了无效的单元格。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数引用了无效的单元格。 请注意，此错误代码支持为自定义函数输入错误，而不是作为自定义函数输出错误。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: invalidReference
     fullName: invalidReference
     langs:
@@ -52,7 +52,7 @@ items:
     type: field
     numericValue: '"#REF!"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.invalidValue:member'
-    summary: '此错误代码指示函数中使用的值的数据类型错误。 如果需要，除了错误代码之外，还可以使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数中的值的数据类型错误。 如果需要，除了错误代码之外，还可以使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: invalidValue
     fullName: invalidValue
     langs:
@@ -60,7 +60,7 @@ items:
     type: field
     numericValue: '"#VALUE!"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.notAvailable:member'
-    summary: '此错误代码指示函数或服务不可用。 如果需要，除了错误代码之外，还可以使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数或服务不可用。 如果需要，除了错误代码之外，还可以使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: notAvailable
     fullName: notAvailable
     langs:
@@ -68,7 +68,7 @@ items:
     type: field
     numericValue: '"#N/A"'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.nullReference:member'
-    summary: '此错误代码指示函数中的区域不相交。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]'
+    summary: '此错误代码指示函数中的区域不相交。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: nullReference
     fullName: nullReference
     langs:
