--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -90,7 +90,7 @@ items:
             uid: 'outlook!Office.EnhancedLocationsChangedEventArgs:interface'
           - name: 实体
             uid: 'outlook!Office.Entities:interface'
-          - name: From
+          - name: 发件人
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
@@ -218,6 +218,8 @@ items:
                     uid: 'office!Office.ValueFormat:enum'
                   - name: VisibilityMode
                     uid: 'office!Office.VisibilityMode:enum'
+              - name: 操作
+                uid: 'office!Office.Actions:interface'
               - name: AddBindingFromNamedItemOptions
                 uid: 'office!Office.AddBindingFromNamedItemOptions:interface'
               - name: AddBindingFromPromptOptions
@@ -228,7 +230,7 @@ items:
                 uid: 'office!Office.Addin:interface'
               - name: Addincommand
                 items:
-                  - name: Event
+                  - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
@@ -270,11 +272,11 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -350,7 +352,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
