--- a/docs/docs-ref-autogen/outlook_1_8/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/toc.yml
@@ -84,7 +84,7 @@ items:
             uid: 'outlook!Office.EnhancedLocationsChangedEventArgs:interface'
           - name: 实体
             uid: 'outlook!Office.Entities:interface'
-          - name: From
+          - name: 发件人
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
@@ -140,7 +140,7 @@ items:
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: Subject
+          - name: 主题
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
@@ -202,6 +202,8 @@ items:
                     uid: 'office!Office.ValueFormat:enum'
                   - name: VisibilityMode
                     uid: 'office!Office.VisibilityMode:enum'
+              - name: 操作
+                uid: 'office!Office.Actions:interface'
               - name: AddBindingFromNamedItemOptions
                 uid: 'office!Office.AddBindingFromNamedItemOptions:interface'
               - name: AddBindingFromPromptOptions
@@ -216,7 +218,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -254,7 +256,7 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
