--- a/docs/docs-ref-autogen/word_1_3/toc.yml
+++ b/docs/docs-ref-autogen/word_1_3/toc.yml
@@ -71,7 +71,7 @@ items:
             uid: 'word!Word.CustomProperty:class'
           - name: CustomPropertyCollection
             uid: 'word!Word.CustomPropertyCollection:class'
-          - name: Document
+          - name: 文档
             uid: 'word!Word.Document:class'
           - name: DocumentCreated
             uid: 'word!Word.DocumentCreated:class'
@@ -173,6 +173,8 @@ items:
                     uid: 'office!Office.ValueFormat:enum'
                   - name: VisibilityMode
                     uid: 'office!Office.VisibilityMode:enum'
+              - name: 操作
+                uid: 'office!Office.Actions:interface'
               - name: AddBindingFromNamedItemOptions
                 uid: 'office!Office.AddBindingFromNamedItemOptions:interface'
               - name: AddBindingFromPromptOptions
@@ -187,7 +189,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -225,7 +227,7 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
