--- a/docs/docs-ref-autogen/excel/toc.yml
+++ b/docs/docs-ref-autogen/excel/toc.yml
@@ -14,7 +14,7 @@ items:
                 items:
                   - name: CancelableInvocation
                     uid: 'custom-functions-runtime!CustomFunctions.CancelableInvocation:interface'
-                  - name: Error
+                  - name: 错误
                     uid: 'custom-functions-runtime!CustomFunctions.Error:class'
                   - name: ErrorCode
                     uid: 'custom-functions-runtime!CustomFunctions.ErrorCode:enum'
@@ -966,6 +966,8 @@ items:
                     uid: 'office!Office.ValueFormat:enum'
                   - name: VisibilityMode
                     uid: 'office!Office.VisibilityMode:enum'
+              - name: 操作
+                uid: 'office!Office.Actions:interface'
               - name: AddBindingFromNamedItemOptions
                 uid: 'office!Office.AddBindingFromNamedItemOptions:interface'
               - name: AddBindingFromPromptOptions
@@ -980,7 +982,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -1022,7 +1024,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -1098,7 +1100,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
