--- a/docs/docs-ref-autogen/excel_1_11/custom-functions-runtime/customfunctions.errorcode.yml
+++ b/docs/docs-ref-autogen/excel_1_11/custom-functions-runtime/customfunctions.errorcode.yml
@@ -20,7 +20,7 @@ items:
       - 'custom-functions-runtime!CustomFunctions.ErrorCode.notAvailable:member'
       - 'custom-functions-runtime!CustomFunctions.ErrorCode.nullReference:member'
   - uid: 'custom-functions-runtime!CustomFunctions.ErrorCode.divisionByZero:member'
-    summary: '此错误代码指示使用的函数被零或空单元格除。 请注意，JavaScript 允许除数为零，因此需要仔细编写错误处理程序以检测此情况。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
+    summary: '此错误代码指示使用的函数被零或空单元格除。 无法使用自定义错误消息。 \[[API 集： CustomFunctionsRuntime 1.3](/office/dev/add-ins/excel/custom-functions-requirement-sets)\]'
     name: divisionByZero
     fullName: divisionByZero
     langs:
